samples/_failures_safe/1761481982_d56d1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f036dea.c: In function ‘main’:
./samples/SAFE/__tmp_5f036dea.c:182:16: error: missing terminating " character
  182 |         printf("Empty
      |                ^~~~~~
./samples/SAFE/__tmp_5f036dea.c:182:9: error: expected expression at end of input
  182 |         printf("Empty
      |         ^~~~~~
./samples/SAFE/__tmp_5f036dea.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f036dea.c:182:9: error: expected declaration or statement at end of input
